# apds9960-rs

./: Cargo.toml  README.md  build-docs.sh
.github/workflows/: build.yml
docs/: crates.js  help.html  index.html  settings.html  src-files.js
docs/apds9960/: all.html  enum.Error.html  enum.GestureDataThreshold.html  index.html  sidebar-items.js  struct.Apds9960.html  struct.Async.html  struct.LightData.html  struct.SyncNonBlocking.html  trait.Mode.html
docs/search.index/: 06424cd3e2e9.js  14c21fb15f6f.js  16de26ab3598.js  16e3ede4294f.js  1a0c3199c79f.js  22499103cb96.js  22865ce4abad.js  3094949f8b35.js  3205d3678c2a.js  3df07f8637f8.js  3ef8467b74d7.js  3f9458aaf210.js  4197f7cdf360.js  4213a7a3c97b.js  43b2c354a813.js  4784dfd89f68.js  498c6e0d1296.js  4b08ef7f7441.js  4b5c504e7e57.js  4c6ebe8ae464.js  4ec218431413.js  4fcdeedd6aa2.js  5ec3f7419f87.js  652daf516943.js  6682b2d16d98.js  6b2f5bbb4706.js  7091af883710.js  77b39703ebae.js  780d2b7ff1ea.js  7889beb7b894.js  7a0545aa6b51.js  7dd972156058.js  root.js
docs/search.index/crateNames/: ff9251675abf.js
docs/search.index/desc/: 67e40e558435.js
docs/search.index/entry/: d6e0042ee171.js
docs/search.index/function/: a69006f727f9.js
docs/search.index/generic_inverted_index/: 680a46d59e5f.js
docs/search.index/name/: eaf5900603aa.js
docs/search.index/normalizedName/: 108e79c1bac1.js
docs/search.index/path/: d35bbebcc256.js
examples/: linux.rs
src/: config.rs  lib.rs  light.rs  proximity.rs  reading.rs
src/gesture/: config.rs  reading.rs
tests/: gesture.rs  interface.rs  light.rs  proximity.rs
tests/common/: mod.rs
(+23 files in other folders)
