[package]
name = "apds9960"
version = "0.2.0"
edition = "2024"
rust-version = "1.85"
authors = [
    "Björn Barwinski <bjoern.lange@tu-dortmund.de>", 
    "Domenic Quirl <domenicquirl@t-online.de>", 
    "Diego Barrios Romero <eldruin@gmail.com>"
]
repository = "https://github.com/BjoernLange/apds9960-rs"
license = "MIT OR Apache-2.0"
description = "Platform-agnostic Rust driver for the APDS9960 digital proximity, ambient light, RGB and gesture sensor."
readme = "README.md"
keywords = ["proximity", "light", "gesture", "sensor", "embedded-hal-driver"]
categories = ["embedded", "hardware-support", "no-std"]
homepage = "https://github.com/eldruin/apds9960-rs"
documentation = "https://docs.rs/apds9960"
include = [
    "**/*.rs",
    "/Cargo.toml",
    "/README.md",
    "/CHANGELOG.md",
    "/LICENSE-MIT",
    "/LICENSE-APACHE",
]

[features]
default = ["nb"]
async = ["embedded-hal-async"]

[dependencies]
embedded-hal = "1"
embedded-hal-async = { version = "1", optional = true }
maybe-async-cfg = "0.2"
nb = { version = "1", optional = true }

[dev-dependencies]
embedded-hal-mock = { version = "0.11", features = ["eh1"] }

[target.'cfg(target_os = "linux")'.dev-dependencies]
linux-embedded-hal = "0.4"

[profile.release]
lto = true

[[example]]
name = "linux"
required-features = ["nb"]

[[test]]
name = "gesture"
required-features = ["nb"]

[[test]]
name = "interface"
required-features = ["nb"]

[[test]]
name = "light"
required-features = ["nb"]

[[test]]
name = "proximity"
required-features = ["nb"]
